# DziemianMCAgent

./: .env.example  .gitignore  Dockerfile  PROJECT_NOTES.md  README.md  pyproject.toml  railway.json  requirements.txt
src/dziemian_mc_agent/: __init__.py  config.py  main.py
src/dziemian_mc_agent/ai/: __init__.py  analyzer.py  prompts.py
src/dziemian_mc_agent/models/: __init__.py  schemas.py
src/dziemian_mc_agent/notion/: __init__.py  client.py
src/dziemian_mc_agent/scrapers/: __init__.py  apify.py  base.py  google_trends.py  wykop.py  youtube.py
src/dziemian_mc_agent/telegram/: __init__.py  bot.py
tests/: test_main.py
